package com.uitopic.restock.platform.iam.domain.model.entities;

import com.uitopic.restock.platform.iam.domain.model.valueobjects.RoleType;
import lombok.*;

/**
 * Represents a Role entity that defines the authorization level of a user.
 * Each role contains a specific role type which dictates privileges.
 */
@Data
@AllArgsConstructor
@NoArgsConstructor
@With
@EqualsAndHashCode
public class Role {

    /**
     * Unique identifier for the Role entity, typically generated by the database.
     */
    private String id;

    /**
     * The type of the role, represented as a RoleType value object, which defines the specific permissions and access levels associated with this role.
     */
    private RoleType type;

    /**
     * Constructs a Role with the specified RoleType.
     *
     * @param type the type of the role to assign
     */
    public Role(RoleType type) {
        this.type = type;
    }
}
